# mc2sf

./: Containerfile  README.md  main.py  pyproject.toml
.github/workflows/: push-container-image.yaml
chart/mc2sf/: Chart.yaml  values.yaml
chart/mc2sf/templates/: cm.yaml  job.yaml  secret.yaml
src/mc2sf/: __main__.py  args.py  backup.py  main.py  rcon.py  seafile.py  util.py  webhook.py
