[project]
name = "mc2sf"
version = "1.2.0"
description = "A tool that backs up your Minecraft Server to Seafile"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rcon>=2.4.9",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "zipfly>=6.0.5",
]

[project.scripts]
mc2sf = "mc2sf.main:main"

[tool.uv.workspace]
members = [
    "mc2sf",
]
